// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`On Screen Recovery Modal Footer Initial Render should render snapshot 1`] = `
<div
  className="modalFooter"
>
  <div
    className="loss"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
  <button
    className="recover"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  />
</div>
`;

exports[`Order Skip Recovery Modal Footer Initial Render should render snapshot 1`] = `
<div
  className="modalFooter"
>
  <div
    className="skipAnyWay"
    onClick={[Function]}
  >
    Skip anyway
  </div>
  <button
    className="keepButton"
    onClick={[Function]}
  >
    Keep Box
  </button>
</div>
`;
